feat: add offline creation of reviews

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "start_url": "index.html",
   "icons": [
     {
-      "src": "img/icon.png",
+      "src": "img/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
